--- a/GLBIProject2_2/GLBIProject2_2.vcxproj
+++ b/GLBIProject2_2/GLBIProject2_2.vcxproj
@@ -18,10 +18,31 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="GLBIshader.cpp" />
+    <ClCompile Include="main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="GLBIshader.h" />
+    <ClInclude Include="stb_image.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="version.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="shader\OpenGLPersetFragmentShader(simple).gls" />
+    <None Include="shader\OpenGLPersetVertexShader(simple).gls" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="texture\Angel.jpg" />
+    <Image Include="texture\Angel.png" />
+    <Image Include="texture\container.jpg" />
+    <Image Include="texture\lalala.png" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
-    <ProjectGuid>{D446B6A0-BEAE-4CE2-8E53-903D11CB27A7}</ProjectGuid>
-    <RootNamespace>GLBIProject21</RootNamespace>
+    <ProjectGuid>{7F010903-C76F-48BD-89FD-A557A377818E}</ProjectGuid>
+    <RootNamespace>GLBIProject22</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -87,13 +108,13 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>D:\SupersLWF\GLBIproject2\packages\glfw.3.3.2\build\native\include\GLFW;D:\SupersLWF\GLBIproject2\packages\glew.1.9.0.1\build\native\include\GL;D:\SupersLWF\GLBIproject2\CustomglCls;$(IncludePath)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>D:\SupersLWF\GLBIproject2\packages\glfw.3.3.2\build\native\include\GLFW;D:\SupersLWF\GLBIproject2\packages\glew.1.9.0.1\build\native\include\GL;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>D:\SupersLWF\GLBIproject2\packages\glfw.3.3.2\build\native\lib\dynamic\v100\win32;D:\SupersLWF\GLBIproject2\packages\glew.1.9.0.1\build\native\lib\v100\Win32\Release\dynamic;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>opengl32.lib;glew.lib;glfw3dll.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>D:\SupersLWF\GLBIproject2\packages\glfw.3.3.2\build\native\lib\dynamic\v100\win32;D:\SupersLWF\GLBIproject2\packages\glew.1.9.0.1\build\native\lib\v100\Win32\Debug\dynamic;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>opengl32.lib;glew.lib;glfw3dll.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -102,13 +123,13 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>D:\SupersLWF\GLBIproject2\packages\glfw.3.3.2\build\native\include\GLFW;D:\SupersLWF\GLBIproject2\packages\glew.1.9.0.1\build\native\include\GL;D:\SupersLWF\GLBIproject2\CustomglCls;$(IncludePath)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>D:\SupersLWF\GLBIproject2\packages\glfw.3.3.2\build\native\include\GLFW;D:\SupersLWF\GLBIproject2\packages\glew.1.9.0.1\build\native\include\GL;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>D:\SupersLWF\GLBIproject2\packages\glfw.3.3.2\build\native\lib\dynamic\v100\win32;D:\SupersLWF\GLBIproject2\packages\glew.1.9.0.1\build\native\lib\v100\Win32\Release\dynamic;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>opengl32.lib;glew.lib;glfw3dll.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>D:\SupersLWF\GLBIproject2\packages\glfw.3.3.2\build\native\lib\dynamic\v100\win32;D:\SupersLWF\GLBIproject2\packages\glew.1.9.0.1\build\native\lib\v100\Win32\Debug\dynamic;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>opengl32.lib;glew.lib;glfw3dll.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -119,15 +140,15 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>D:\SupersLWF\GLBIproject2\packages\glfw.3.3.2\build\native\include\GLFW;D:\SupersLWF\GLBIproject2\packages\glew.1.9.0.1\build\native\include\GL;D:\SupersLWF\GLBIproject2\CustomglCls;$(IncludePath)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>D:\SupersLWF\GLBIproject2\packages\glfw.3.3.2\build\native\include\GLFW;D:\SupersLWF\GLBIproject2\packages\glew.1.9.0.1\build\native\include\GL;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>D:\SupersLWF\GLBIproject2\packages\glfw.3.3.2\build\native\lib\dynamic\v100\win32;D:\SupersLWF\GLBIproject2\packages\glew.1.9.0.1\build\native\lib\v100\Win32\Release\dynamic;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>opengl32.lib;glew.lib;glfw3dll.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>D:\SupersLWF\GLBIproject2\packages\glfw.3.3.2\build\native\lib\dynamic\v100\win32;D:\SupersLWF\GLBIproject2\packages\glew.1.9.0.1\build\native\lib\v100\Win32\Debug\dynamic;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>opengl32.lib;glew.lib;glfw3dll.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -138,38 +159,17 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>D:\SupersLWF\GLBIproject2\packages\glfw.3.3.2\build\native\include\GLFW;D:\SupersLWF\GLBIproject2\packages\glew.1.9.0.1\build\native\include\GL;D:\SupersLWF\GLBIproject2\CustomglCls;$(IncludePath)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>D:\SupersLWF\GLBIproject2\packages\glfw.3.3.2\build\native\include\GLFW;D:\SupersLWF\GLBIproject2\packages\glew.1.9.0.1\build\native\include\GL;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>D:\SupersLWF\GLBIproject2\packages\glfw.3.3.2\build\native\lib\dynamic\v100\win32;D:\SupersLWF\GLBIproject2\packages\glew.1.9.0.1\build\native\lib\v100\Win32\Release\dynamic;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>opengl32.lib;glew.lib;glfw3dll.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>D:\SupersLWF\GLBIproject2\packages\glfw.3.3.2\build\native\lib\dynamic\v100\win32;D:\SupersLWF\GLBIproject2\packages\glew.1.9.0.1\build\native\lib\v100\Win32\Debug\dynamic;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>opengl32.lib;glew.lib;glfw3dll.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <Text Include="version.txt" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="GLBIshader.cpp" />
-    <ClCompile Include="main.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="GLBIshader.h" />
-    <ClInclude Include="stb_image.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="shader\OpenGLPersetFragmentShader(simple).gls" />
-    <None Include="shader\OpenGLPersetVertexShader(simple).gls" />
-  </ItemGroup>
-  <ItemGroup>
-    <Image Include="texture\Angel.jpg" />
-    <Image Include="texture\Angel.png" />
-    <Image Include="texture\container.jpg" />
-    <Image Include="texture\lalala.png" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
